--- a/index.html
+++ b/index.html
@@ -9,7 +9,18 @@
 
 body { font-family: Arial, sans-serif; background: #fdf6e3; color: #333; line-height: 1.5; }
 
-header { background: #7ebc9f; color: #fff; padding: 50px 20px; text-align: center; }
+header {
+    background: 
+        linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
+        url("images/hero.jpg") center/cover no-repeat;
+
+    color: #fff;
+    padding: 120px 20px;
+    text-align: center;
+}
+header h1, header p {
+    text-shadow: 0 2px 6px rgba(0,0,0,0.6);
+}  
 header h1 { font-size: 2.8em; margin-bottom: 10px; }
 header p { font-size: 1.2em; }
 
