--- a/index.html
+++ b/index.html
@@ -10,14 +10,16 @@
 body { font-family: Arial, sans-serif; background: #fdf6e3; color: #333; line-height: 1.5; }
 
 header {
-    background: 
+    background:
         linear-gradient(rgba(0,0,0,0.45), rgba(0,0,0,0.45)),
-        url("images/hero.jpg") center/cover no-repeat;
+        url("images/hero.jpg") center/contain no-repeat;
 
+    background-color: #000;
     color: #fff;
     padding: 120px 20px;
     text-align: center;
 }
+
 header h1, header p {
     text-shadow: 0 2px 6px rgba(0,0,0,0.6);
 }  
