--- a/index.html
+++ b/index.html
@@ -2,6 +2,7 @@
 <html lang="ru">
 <head>
 <meta charset="UTF-8">
+<meta name="viewport" content="width=device-width, initial-scale=1.0">
 <title>Ферма и собаки</title>
 <style>
 /* Сброс стилей */
@@ -46,16 +47,15 @@ footer { background: #7ebc9f; color: #fff; text-align: center; padding: 20px; ma
 /* Кнопки */
 .button { display: inline-block; background: #056676; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none; margin: 5px; transition: 0.3s; }
 .button:hover { background: #034f56; }
-@media (max-width: 768px) {
+@media screen and (max-width: 768px) {
     header {
-        background:
-            linear-gradient(rgba(0,0,0,0.4), rgba(0,0,0,0.4)),
-            url("images/hero.jpg") center/contain no-repeat;
-
-        background-color: #000;
-        min-height: 100vh;
+        background-size: contain !important;
+        background-position: center !important;
+        background-repeat: no-repeat !important;
+        min-height: 100vh !important;
+        background-color: #000 !important;
     }
-}    
+}   
 </style>
 </head>
 <body>
