--- a/index.html
+++ b/index.html
@@ -48,14 +48,27 @@ footer { background: #7ebc9f; color: #fff; text-align: center; padding: 20px; ma
 .button { display: inline-block; background: #056676; color: #fff; padding: 10px 20px; border-radius: 5px; text-decoration: none; margin: 5px; transition: 0.3s; }
 .button:hover { background: #034f56; }
 @media screen and (max-width: 768px) {
+
     header {
-        background-size: contain !important;
-        background-position: center !important;
-        background-repeat: no-repeat !important;
-        min-height: 100vh !important;
+        min-height: auto !important;
+        padding: 40px 15px !important;
+
+        background:
+            url("images/hero.jpg") center top / contain no-repeat;
+
         background-color: #000 !important;
     }
-}   
+
+    header h1 {
+        margin-top: 55vw;
+        font-size: 2em;
+    }
+
+    header p {
+        font-size: 1em;
+    }
+
+}
 </style>
 </head>
 <body>
